{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 25,
  "lineage": "ccbfc3a3-4dd6-7f4b-86b5-2d0feab65abe",
  "resources": [
    {
      "module": "module.vm1",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg11",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg11/providers/Microsoft.Network/networkSecurityGroups/new-nsg11",
            "location": "uksouth",
            "name": "new-nsg11",
            "resource_group_name": "new-rg11",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule11",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vm1.azurerm_resource_group.rg11"
          ]
        }
      ]
    },
    {
      "module": "module.vm1",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet11",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg11/providers/Microsoft.Network/virtualNetworks/new-vnet11/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "new-rg11",
            "virtual_network_name": "new-vnet11"
          },
          "dependencies": [
            "module.vm1.azurerm_resource_group.rg11",
            "module.vm1.azurerm_virtual_network.vnet11"
          ]
        }
      ]
    },
    {
      "module": "module.vm1",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet12",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg11/providers/Microsoft.Network/virtualNetworks/new-vnet11/subnets/subnet2",
            "name": "subnet2",
            "resource_group_name": "new-rg11",
            "virtual_network_name": "new-vnet11"
          },
          "dependencies": [
            "module.vm1.azurerm_resource_group.rg11",
            "module.vm1.azurerm_virtual_network.vnet11"
          ]
        }
      ]
    },
    {
      "module": "module.vm1",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet13",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg11/providers/Microsoft.Network/virtualNetworks/new-vnet11/subnets/subnet3",
            "name": "subnet3",
            "resource_group_name": "new-rg11",
            "virtual_network_name": "new-vnet11"
          },
          "dependencies": [
            "module.vm1.azurerm_resource_group.rg11",
            "module.vm1.azurerm_virtual_network.vnet11"
          ]
        }
      ]
    },
    {
      "module": "module.vm1",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet11",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "bbab8ea4-8614-443b-9e45-b367646910fb",
            "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg11/providers/Microsoft.Network/virtualNetworks/new-vnet11",
            "location": "uksouth",
            "name": "new-vnet11",
            "resource_group_name": "new-rg11",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg11/providers/Microsoft.Network/virtualNetworks/new-vnet11/subnets/subnet1",
                "name": "subnet1"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg11/providers/Microsoft.Network/virtualNetworks/new-vnet11/subnets/subnet2",
                "name": "subnet2"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg11/providers/Microsoft.Network/virtualNetworks/new-vnet11/subnets/subnet3",
                "name": "subnet3"
              }
            ]
          },
          "dependencies": [
            "module.vm1.azurerm_resource_group.rg11"
          ]
        }
      ]
    },
    {
      "module": "module.vm2",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg11",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg12/providers/Microsoft.Network/networkSecurityGroups/new-nsg12",
            "location": "uksouth",
            "name": "new-nsg12",
            "resource_group_name": "new-rg12",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule12",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vm2.azurerm_resource_group.rg11"
          ]
        }
      ]
    },
    {
      "module": "module.vm2",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet11",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg12/providers/Microsoft.Network/virtualNetworks/new-vnet12/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "new-rg12",
            "virtual_network_name": "new-vnet12"
          },
          "dependencies": [
            "module.vm2.azurerm_resource_group.rg11",
            "module.vm2.azurerm_virtual_network.vnet11"
          ]
        }
      ]
    },
    {
      "module": "module.vm2",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet12",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg12/providers/Microsoft.Network/virtualNetworks/new-vnet12/subnets/subnet2",
            "name": "subnet2",
            "resource_group_name": "new-rg12",
            "virtual_network_name": "new-vnet12"
          },
          "dependencies": [
            "module.vm2.azurerm_resource_group.rg11",
            "module.vm2.azurerm_virtual_network.vnet11"
          ]
        }
      ]
    },
    {
      "module": "module.vm2",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet13",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg12/providers/Microsoft.Network/virtualNetworks/new-vnet12/subnets/subnet3",
            "name": "subnet3",
            "resource_group_name": "new-rg12",
            "virtual_network_name": "new-vnet12"
          },
          "dependencies": [
            "module.vm2.azurerm_resource_group.rg11",
            "module.vm2.azurerm_virtual_network.vnet11"
          ]
        }
      ]
    },
    {
      "module": "module.vm2",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet11",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "23b87fd6-8882-4c73-a46a-517a8f438015",
            "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg12/providers/Microsoft.Network/virtualNetworks/new-vnet12",
            "location": "uksouth",
            "name": "new-vnet12",
            "resource_group_name": "new-rg12",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg12/providers/Microsoft.Network/virtualNetworks/new-vnet12/subnets/subnet1",
                "name": "subnet1"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg12/providers/Microsoft.Network/virtualNetworks/new-vnet12/subnets/subnet2",
                "name": "subnet2"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg12/providers/Microsoft.Network/virtualNetworks/new-vnet12/subnets/subnet3",
                "name": "subnet3"
              }
            ]
          },
          "dependencies": [
            "module.vm2.azurerm_resource_group.rg11"
          ]
        }
      ]
    },
    {
      "module": "module.vm3",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg11",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg13/providers/Microsoft.Network/networkSecurityGroups/new-nsg13",
            "location": "uksouth",
            "name": "new-nsg13",
            "resource_group_name": "new-rg13",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule13",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vm3.azurerm_resource_group.rg11"
          ]
        }
      ]
    },
    {
      "module": "module.vm3",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet11",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg13/providers/Microsoft.Network/virtualNetworks/new-vnet13/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "new-rg13",
            "virtual_network_name": "new-vnet13"
          },
          "dependencies": [
            "module.vm3.azurerm_resource_group.rg11",
            "module.vm3.azurerm_virtual_network.vnet11"
          ]
        }
      ]
    },
    {
      "module": "module.vm3",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet12",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg13/providers/Microsoft.Network/virtualNetworks/new-vnet13/subnets/subnet2",
            "name": "subnet2",
            "resource_group_name": "new-rg13",
            "virtual_network_name": "new-vnet13"
          },
          "dependencies": [
            "module.vm3.azurerm_resource_group.rg11",
            "module.vm3.azurerm_virtual_network.vnet11"
          ]
        }
      ]
    },
    {
      "module": "module.vm3",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet13",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg13/providers/Microsoft.Network/virtualNetworks/new-vnet13/subnets/subnet3",
            "name": "subnet3",
            "resource_group_name": "new-rg13",
            "virtual_network_name": "new-vnet13"
          },
          "dependencies": [
            "module.vm3.azurerm_resource_group.rg11",
            "module.vm3.azurerm_virtual_network.vnet11"
          ]
        }
      ]
    },
    {
      "module": "module.vm3",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet11",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3abca5ab-6fb7-450d-ab41-8aa22f7782cc",
            "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg13/providers/Microsoft.Network/virtualNetworks/new-vnet13",
            "location": "uksouth",
            "name": "new-vnet13",
            "resource_group_name": "new-rg13",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg13/providers/Microsoft.Network/virtualNetworks/new-vnet13/subnets/subnet1",
                "name": "subnet1"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg13/providers/Microsoft.Network/virtualNetworks/new-vnet13/subnets/subnet2",
                "name": "subnet2"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg13/providers/Microsoft.Network/virtualNetworks/new-vnet13/subnets/subnet3",
                "name": "subnet3"
              }
            ]
          },
          "dependencies": [
            "module.vm3.azurerm_resource_group.rg11"
          ]
        }
      ]
    },
    {
      "module": "module.vm4",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg11",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg14/providers/Microsoft.Network/networkSecurityGroups/new-nsg14",
            "location": "uksouth",
            "name": "new-nsg14",
            "resource_group_name": "new-rg14",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule14",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vm4.azurerm_resource_group.rg11"
          ]
        }
      ]
    },
    {
      "module": "module.vm4",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet11",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg14/providers/Microsoft.Network/virtualNetworks/new-vnet14/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "new-rg14",
            "virtual_network_name": "new-vnet14"
          },
          "dependencies": [
            "module.vm4.azurerm_resource_group.rg11",
            "module.vm4.azurerm_virtual_network.vnet11"
          ]
        }
      ]
    },
    {
      "module": "module.vm4",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet12",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg14/providers/Microsoft.Network/virtualNetworks/new-vnet14/subnets/subnet2",
            "name": "subnet2",
            "resource_group_name": "new-rg14",
            "virtual_network_name": "new-vnet14"
          },
          "dependencies": [
            "module.vm4.azurerm_resource_group.rg11",
            "module.vm4.azurerm_virtual_network.vnet11"
          ]
        }
      ]
    },
    {
      "module": "module.vm4",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet13",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg14/providers/Microsoft.Network/virtualNetworks/new-vnet14/subnets/subnet3",
            "name": "subnet3",
            "resource_group_name": "new-rg14",
            "virtual_network_name": "new-vnet14"
          },
          "dependencies": [
            "module.vm4.azurerm_resource_group.rg11",
            "module.vm4.azurerm_virtual_network.vnet11"
          ]
        }
      ]
    },
    {
      "module": "module.vm4",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet11",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "88a9c949-a22d-42ba-a155-b9351479cc51",
            "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg14/providers/Microsoft.Network/virtualNetworks/new-vnet14",
            "location": "uksouth",
            "name": "new-vnet14",
            "resource_group_name": "new-rg14",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg14/providers/Microsoft.Network/virtualNetworks/new-vnet14/subnets/subnet1",
                "name": "subnet1"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg14/providers/Microsoft.Network/virtualNetworks/new-vnet14/subnets/subnet2",
                "name": "subnet2"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/a6d0e549-78fc-495b-a408-b3cdebadce37/resourceGroups/new-rg14/providers/Microsoft.Network/virtualNetworks/new-vnet14/subnets/subnet3",
                "name": "subnet3"
              }
            ]
          },
          "dependencies": [
            "module.vm4.azurerm_resource_group.rg11"
          ]
        }
      ]
    }
  ]
}